# cmake_win32

./: CMakeLists.txt  CMakeProject1.cpp
